classDiagram

%% =========================
%% AGENT LAYER
%% =========================
class Agent {
    -int agent_id
    -string name
    -string role
    -list~Capability~ capabilities
    -AgentState state
    -CommunicationAdapter comms
    -list~MemorySystem~ memory_refs

    +perceive(input)
    +decide(context)
    +act(task)
    +communicate(message, target, protocol)
}

class Capability {
    -string name
    -string type
    -dict constraints
}

class AgentState {
    <<enum>>
    IDLE
    RUNNING
    ERROR
    WAITING
}

%% =========================
%% COMMUNICATION
%% =========================
class CommunicationAdapter {
    -ProtocolType protocol
    -string endpoint
    -dict config

    +send(message)
    +receive()
}

class ProtocolType {
    <<enum>>
    REST
    WEBSOCKET
    MESSAGE_QUEUE
}

Agent --> CommunicationAdapter

%% =========================
%% MEMORY SYSTEM (JETZT KONKRET)
%% =========================
class MemorySystem {
    -MemoryType type
    -string backend
    -dict config

    +store(key, value)
    +retrieve(key)
    +search(vector_query)
    +persist()
}

class MemoryType {
    <<enum>>
    SHORT_TERM
    LONG_TERM
    VECTOR
}

Agent "*" --> "*" MemorySystem

%% =========================
%% TASK SYSTEM
%% =========================
class Task {
    -int task_id
    -string input
    -string output
    -TaskStatus status
    -Agent assigned_agent
    -list~Resource~ required_resources
    -RetryPolicy retry_policy

    +execute()
    +validate()
    +complete()
}

class TaskStatus {
    <<enum>>
    PENDING
    RUNNING
    SUCCESS
    FAILED
}

class RetryPolicy {
    -int max_retries
    -int backoff_ms
    -bool exponential
}

%% =========================
%% EXECUTION (FEHLERBEHANDLUNG!)
%% =========================
class TaskExecution {
    -int execution_id
    -Task task_ref
    -timestamp start_time
    -timestamp end_time
    -string result
    -ExecutionStatus status
    -list~ErrorEvent~ errors

    +start()
    +finish()
    +rollback(strategy)
    +retry()
}

class ExecutionStatus {
    <<enum>>
    STARTED
    COMPLETED
    FAILED
    ROLLED_BACK
}

class ErrorEvent {
    -string type
    -string message
    -timestamp timestamp
    -dict context
}

Task "1" --> "*" TaskExecution
TaskExecution --> Task

%% =========================
%% ERROR HANDLING STRATEGY
%% =========================
class RollbackStrategy {
    <<enum>>
    RETRY
    COMPENSATE
    FAIL_FAST
    FALLBACK_RESOURCE
}

TaskExecution --> RollbackStrategy

%% =========================
%% RESOURCES
%% =========================
class Resource {
    -int resource_id
    -ResourceType type
    -string endpoint
    -dict metadata
    -ResourceState state

    +acquire()
    +release()
    +health_check()
}

class ResourceType {
    <<enum>>
    API
    MODEL
    DATABASE
    FILE
    GPU
}

class ResourceState {
    <<enum>>
    AVAILABLE
    BUSY
    DOWN
}

Task --> Resource

%% =========================
%% INTENT
%% =========================
class Intent {
    -int intent_id
    -string goal
    -dict constraints
    -int priority
    -timestamp timestamp

    +plan()
    +refine()
    +promote_to_task()
}

%% =========================
%% FLOW SYSTEM
%% =========================
class ExecutionFlow {
    -int flow_id
    -FlowState state

    +run()
    +pause()
    +observe()
}

class FlowState {
    <<enum>>
    CREATED
    RUNNING
    PAUSED
    COMPLETED
}

class FlowNode {
    -Task task
    -Agent agent
}

class FlowEdge {
    -FlowNode from
    -FlowNode to
    -Condition condition
}

class Condition {
    -string expression
}

ExecutionFlow --> FlowNode
ExecutionFlow --> FlowEdge
FlowNode --> Task
FlowNode --> Agent